Initial commit: Bid Tracker app

--- a/.env
+++ b/.env
@@ -1,6 +1,11 @@
+# Backend
 POSTGRES_USER=do_admin
 POSTGRES_PASSWORD=supersecure
 POSTGRES_DB=bidtracker
 DATABASE_URL=postgres://do_admin:supersecure@db:5432/bidtracker
-CORS_ORIGIN=http://localhost:5173
-PUBLIC_API_BASE_URL=http://localhost:8080
+
+# CORS: allow the deployed frontend instead of localhost
+CORS_ORIGIN=https://bid-tracker-app-8w7q8.ondigitalocean.app
+
+# Frontend: point to backend API URL
+PUBLIC_API_BASE_URL=https://bid-tracker-app-8w7q8.ondigitalocean.app/api
