--- a/backend/package.json
+++ b/backend/package.json
@@ -3,11 +3,12 @@
   "version": "1.0.0",
   "type": "module",
   "main": "server.js",
-  "scripts": { "start": "node server.js" },
+  "scripts": {
+    "start": "node server.js"
+  },
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.19.2",
     "pg": "^8.11.3"
-  },
-  "engines": { "node": ">=20.x" }
+  }
 }
