--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,7 +13,6 @@
     "react-dom": "^18.3.1"
   },
   "devDependencies": {
-    "vite": "^5.3.4",
-    "@vitejs/plugin-react": "^4.3.1"
+    "vite": "^5.3.4"
   }
 }
