--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "react-dom": "^18.3.1"
   },
   "devDependencies": {
-    "vite": "^5.3.4"
+    "vite": "^5.3.4",
+    "@vitejs/plugin-react": "^4.2.1"
   }
 }
