--- a/.env.example
+++ b/.env.example
@@ -8,7 +8,6 @@ POSTGRES_DB=bidtracker
 DATABASE_URL=postgres://do_admin:supersecure@db:5432/bidtracker
 
 # CORS for frontend origin (adjust as needed)
-CORS_ORIGIN=http://localhost:5173
-
+CORS_ORIGIN=https://bid-tracker-app-8w7q8.ondigitalocean.app
 # Public API base for the React app
-PUBLIC_API_BASE_URL=http://localhost:8080
+PUBLIC_API_BASE_URL=https://bid-tracker-app-8w7q8.ondigitalocean.app/api
